@@ -3,6 +3,7 @@
 ### 1.1.2 (in Development)
 * Dev - Added in the Review Schema integrated with Yoast WordPress SEO
 * Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version.
+* Dev - Enabled the sorting of the gallery field
 
 ### 1.1.1
 * Fix - Travis and dependency fixes 
